# Stitching

./: homography - Shortcut.lnk
04-10-23/: CMakeLists.txt
04-10-23/FramesStitcher/: CMakeLists.txt
04-10-23/FramesStitcher/StitchingEngine/: StitchingEngine.cpp  StitchingEngine.h  StitchingEngineImpl.cpp  StitchingEngineImpl.h  SuperPoint.cpp  SuperPoint.h
04-10-23/FramesStitcher/StitchingEngineTester/: StitchingTester.cpp
04-10-23/InferenceWrapper/: CMakeLists.txt
04-10-23/InferenceWrapper/include/InferenceWrapper/: AnalyzerTraits.h  InferenceChannelParams.h  InferenceEngine.h  InferenceEngineParams.h  InferenceWrapperLibCommon.h
04-10-23/InferenceWrapper/src/: AnalyzerAtlas300.cpp  AnalyzerAtlas300.h  AnalyzerFactory.h  AnalyzerIntelIE.cpp  AnalyzerPool.h  AnalyzerTensorRT.cpp  AnalyzerTensorRT.h  Channel.cpp  GenericChannelState.cpp  GenericChannelState.h  IAnalyzer.h  InferenceHelperFunctions.cpp  InferenceWrapperLib.cpp  main.cpp
04-10-23/InferenceWrapper/src/TensorRT/: Buffers.cpp  CacheHelpers.cpp  Logger.h  ReusableRequest.cpp
04-10-23/ItvCvUtils/: CMakeLists.txt
04-10-23/ItvCvUtils/include/ItvCvUtils/: CalibrationRods.h  Colorspaces.h  ComputerVisionCommon.h  DumpCallback.h  FpsCounter.h  Frame.h  FrameConverter.h  ItvCvDefs.h  NeuroAnalyticsApi.h  PointMatching.h  PointOperators.h  PoseC.h  simple_rpc.hpp  stopwatch.h
04-10-23/ItvCvUtils/include/ItvCvUtils/Gpu/: FrameConverter.h
04-10-23/ItvCvUtils/pybind/: pybind.h
04-10-23/ItvCvUtils/src/: PointMatching.cpp  ThreadName.cpp  Unicode.cpp
04-10-23/ItvCvUtils/tests/: TestSimpleRPC.cpp
04-10-23/NetworkInformation/: CMakeLists.txt
04-10-23/NetworkInformation/include/NetworkInformation/: NetworkInformationLib.h  Utils.h
04-10-23/NetworkInformation/src/: MetadataJson.cpp  MetadataJson.h  NetworkInformationPool.cpp  TagsConstant.h  Utils.cpp  main.cpp
19-09-23/FramesStitcher/: CMakeLists.txt
19-09-23/FramesStitcher/StitchingEngine/: LightGlue.cpp  LightGlue.h  StitchingEngine.cpp  StitchingEngineImpl.cpp  StitchingEngineImpl.h  SuperPoint.cpp  SuperPoint.h
19-09-23/FramesStitcher/StitchingEngineTester/: StitchingTester.cpp  stdafx.cpp  stdafx.h
19-09-23/InferenceWrapper/include/InferenceWrapper/: AnalyzerTraits.h  InferenceEngine.h  InferenceWrapperLib.h
19-09-23/InferenceWrapper/pybind/: pybind.cpp
19-09-23/InferenceWrapper/src/: AnalyzerAtlas300.cpp  AnalyzerIntelIE.cpp  AnalyzerIntelIE.h  AnalyzerPool.cpp  AnalyzerTensorRT.cpp  Channel.cpp  Channel.h  InferenceHelperFunctions.cpp  InferenceHelperFunctions.h  InferenceWrapperLib.cpp  NeuroAnalyticsGpuCacheGenerator.cpp
19-09-23/InferenceWrapper/src/TensorRT/: Buffers.h  CacheHelpers.h  ErrorRecorder.cpp  ErrorRecorder.h  Int8Calibrator.cpp  Int8Calibrator.h  Logger.cpp  ReusableRequest.h
19-09-23/ItvCvUtils/: CMakeLists.txt
19-09-23/ItvCvUtils/include/ItvCvUtils/: Cpuid.h  DetectionPostProcessing.h  DynamicThreadPoolImpl.h  Envar.h  Frame.h  GeneralStructuresC.h  ItvCvUtils.h  Logf.h  Math.h  NeuroAnalyticsApi.h  PointDetection.h  Pose.h  ThreadName.h  Uuid.h  fd_passing_server.hpp
19-09-23/ItvCvUtils/pybind/: pybind.cpp
19-09-23/ItvCvUtils/src/: DetectionPostProcessing.cpp  DumpCallback.cpp  DynamicThreadPool.cpp  Envar.cpp  FrameConverter.cpp  NeuroAnalyticsApi.cpp  PointDetection.cpp  Pose.cpp  PoseC.cpp
19-09-23/ItvCvUtils/src/Gpu/: FrameConverter.cpp
19-09-23/NetworkInformation/include/NetworkInformation/: NetworkInformationLib.h
19-09-23/NetworkInformation/src/: MetadataJson.cpp  MetadataJson.h  NetworkInformation.cpp  NetworkInformationPool.h  TagsConstant.h  Utils.cpp
FramesStitcher/: CMakeLists.txt
FramesStitcher/ItvCvUtils/: CMakeLists.txt
FramesStitcher/ItvCvUtils/include/ItvCvUtils/: DescriptorAccumulators.h  DynamicThreadPool.h  GeneralStructuresC.h  Log.h  Unicode.h  VideoConverter.h  asio_unix_fd_passing.hpp
FramesStitcher/ItvCvUtils/pybind/: pybind.cpp
FramesStitcher/ItvCvUtils/src/: CalibrationRods.cpp  Cpuid.cpp  DescriptorAccumulators.cpp  FpsCounter.cpp  Log.cpp  Math.cpp  Uuid.cpp  VideoConverter.cpp
FramesStitcher/ItvCvUtils/tests/: TestDynamicThreadPool.cpp  main.cpp
FramesStitcher/NetInfo/: ItvCvUtilsPyBind.pyd  NetworkInformationPyBind.cp311-win_amd64.pyd  TestNetInfo.py  __init__.py  example.py
FramesStitcher/NetworkInformation/: README.md
FramesStitcher/NetworkInformation/include/NetworkInformation/: NetworkInformationLib.h  Utils.h
FramesStitcher/NetworkInformation/pybind/: pybind.cpp
FramesStitcher/NetworkInformation/src/: MetadataJson.cpp  MetadataJson.h  Utils.cpp
FramesStitcher/StitchingEngine/: LightGlue.cpp  LightGlue.h  StitchingEngine.h  StitchingEngineImpl.cpp  StitchingEngineImpl.h  SuperPoint.cpp  SuperPoint.h
FramesStitcher/StitchingEngineTester/: StitchingTester.cpp  TestSuperPoint.cpp
LightGlue-modified/LightGlue/: 1.py  demo.ipynb  example.py  export.py
LightGlue-modified/LightGlue/lightglue/: aliked.py  deform_conv2d_onnx_exporter.py  lightglue.py  sift.py  superpoint_open.py  utils.py
SuperPointModified/: 1.py  end2end.py  export.py  keypoints.txt  lightglue.py  super_lightglue.py  superpoint_pytorch.py  utils.py
SuperPointModified/weights/: metadata-1024.json
glue-factory/: export.py  stitching.py
glue-factory/gluefactory_nonfree/: lightglue.py
myProject/: Stitching.py
